# Boomerang

./: .gitignore  FedDPR.session.sql  LICENSE  README.md  batch.py  docker-compose.yml  fedavg.py  fedbds.session.sql  makebackdoor.py  pyproject.toml  query.py  result.duckdb  run.ipynb  run.py  sample_config.toml  suan.py  test.py
Boomerang/: algorithm.py
Boomerang/peer/: aggregator.py
Boomerang/training/: trainer.py
Boomerang/utils/: btbcn.py
FedDPR/: algorithm.py  config.py  utils.py
FedDPR/algorithm/: __init__.py  base.py  factory.py  fedavg.py  feddpr.py  fl.py  simple.py
FedDPR/peer/: __init__.py  aggregator.py  attacker.py  learner.py
FedDPR/training/: __init__.py  trainer.py
FedDPR/utils/: btbcn.py
config/: current.toml  default.toml  feddmc-cnn.toml  feddmc.toml  ref.toml  test.toml
config/batch/: backdoor_fedavg.toml  backdoor_krum.toml  backdoor_proposed.toml  fedavg.toml  feddpr.toml  krum.toml  median.toml  score-cnn.toml  score.toml  trmean.toml
config/dir0.1/: dir0.1_ratio10.toml  dir0.1_ratio20.toml  dir0.1_ratio50.toml  dir0.1_ratio80.toml
config/methods/: fedavg.toml  krum.toml  noattack.toml  proposed.toml
config/penalty/: pen0.6.toml  pen0.7.toml  pen0.75.toml  pen0.8.toml  pen0.9.toml
db/: config.py  create.sql  query.py  query.sh
db/create/: backdoor.sql  config.sql  experiment.sql  fedavg.sql  feddpr.sql  record.sql  result.sql  score.sql  (+3 more)
feddpr/: config.py  utils.py
log/: al.txt  fedavg.txt  feddmc  feddpr.txt  la.txt
test/: broadcast.py  cfg.py  fedavg.py  proposed.py
tools/: figure.py  query.py  test.py
(+23 files in other folders)
